--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^3.6.0
   provider: ^6.1.2
   flutter_spinkit: ^5.2.1
+  shared_preferences: ^2.0.6
 
 dev_dependencies:
   flutter_test:
