--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   provider: ^6.1.2
   flutter_spinkit: ^5.2.1
   shared_preferences: ^2.0.6
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
