--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_spinkit: ^5.2.1
   shared_preferences: ^2.0.6
   uuid: ^3.0.6
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
