--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+/home/ndjekornom/Desktop/Lunch Crew/Motion app/motion_app/android/app/google-services.json
