--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   uuid: ^3.0.6
   intl: ^0.19.0
   fl_chart: ^0.69.0
+  font_awesome_flutter: ^10.7.0
+  firebase_messaging: ^15.1.3
+  flutter_local_notifications: ^18.0.0
  
 
 dev_dependencies:
