--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   font_awesome_flutter: ^10.7.0
   firebase_messaging: ^15.1.3
   flutter_local_notifications: ^18.0.0
+  timezone: ^0.9.0
+  permission_handler: ^11.3.1
  
 
 dev_dependencies:
